clusters/production/bazarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "bazarr.production.rpcu.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bazarr-oauth2-proxy
          port: 80
